syntax = "proto3";
package Tests;
import "google/protobuf/any.proto";
enum Test1ObjectServiceProperty {
	Prop = 0;
}
message Test1SetPropRequest {
	uint64 objectId = 1;
	Test1ObjectServiceProperty prop = 2;
	oneof value {
		string str = 3;
	}
}
message Test1SetPropResponse {
	uint64 objectId = 1;
	Test1ObjectServiceProperty prop = 2;
}
message Test1GetPropRequest {
	uint64 objectId = 1;
	Test1ObjectServiceProperty prop = 2;
}
message Test1GetPropResponse {
	uint64 objectId = 1;
	Test1ObjectServiceProperty prop = 2;
	oneof value {
		string str = 3;
	}
}
message Test1CreateResponse {
	uint64 objectId = 1;
}
message Test1StopRequest {
}
message Test1StopResponse {
}
service Test1ObjectService {
	rpc Create (stream google.protobuf.Any) returns (stream google.protobuf.Any);
	rpc GetProperty (Test1GetPropRequest) returns (Test1GetPropResponse);
	rpc SetProperty (Test1SetPropRequest) returns (Test1SetPropResponse);
}
